# RasberryPi-MSP430-Arduino-Esp8266

./: README.md
Automatic Plant Watering System(Arduino)/: Plant_Watering_System.ino  README.md
Esp8266 RFID Website/: Esp8266 Rfid.ino  Readme.md  deneme.ino  index_html.h
MSP430 With Dht11 Sensor/: README.md  main.c
MSP430 With Dht11 Sensor/Debug/: Dht11 Sensor.map  Dht11 Sensor.out  Dht11 Sensor_linkInfo.xml  main.d  makefile  subdir_rules.mk
Mqtt RaspberryPi4 Nodemcu/: README.md  raspberry_pi_mqtt.ino
Qt RFID GUI/: CMakeLists.txt  ReadMe.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  rfid_dht11.ino
